--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,5 +1,7 @@
+@import '../scss/mixins.scss';
+
 .Home {
-    width: 100%;
-    height: 100vh;
-    background: white;
+    display: flex;
+    justify-content: center;
+    @include pageStyle
 }
