--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,7 +1,23 @@
+
+@mixin  pageStyle {
+    width: 100%;
+    height: 80vh;
+    border-radius: 25px;
+    background: white; 
+}
+
 @mixin blockCenter($alignHorizontal: center, $alignVertical: center, $height: 100%, $width: 100%) {
     display: flex;
     justify-content: $alignHorizontal;
     align-items: $alignVertical;
     width: $width;
     height: $height;
+}
+
+@mixin animationHiden ($enter, $exit) {
+    .enter { opacity: 0; }
+    .enter-active { opacity: 1; transition: opacity $enter; }
+    .exit { opacity: $exit; }
+    .exit-active { opacity: 0; transition: opacity $exit; }
+    .exit-done { opacity: 0; }
 }
