--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,3 +1,7 @@
 $menuToggleColor: #ffffff;
 $categoriesListWidth: 400px;
-$categoriesListHeight: 600px
+$categoriesListHeight: 600px;
+$purpleColor: #BC9CFF;
+$blueColor: #8BA4F9;
+$redColor: #a71d31;
+$redColorDark: #3f0d12;
