--- a/src/components/ProductImageCard/ProductImageCard.scss
+++ b/src/components/ProductImageCard/ProductImageCard.scss
@@ -5,8 +5,7 @@
     @include blockCenter($height: 400px, $width: 250px);
     position: relative;
     flex-direction: column;
-    border: 2px solid black;
-    margin: 10px;
+    margin: 15px;
     .conteiner {
         @include blockCenter();
         border-radius: 25px;
@@ -16,9 +15,6 @@
     .sliderWrapper {
         @include blockCenter($alignHorizontal: 'flex-start', $height: 80px);
         flex-direction: column;
-        
-       
-        border: green 1px solid;
     }
 
     .sliderConteiner {
@@ -31,8 +27,6 @@
             &:last-child {margin-left: 10px;}
         }
     }
-   
-
     .inputConteiner {
         @include blockCenter();
         position: relative;
@@ -50,10 +44,17 @@
     }
 
     .imageConteiner {
-        width: 100%;
-        height: 100%;
+        width: 250px;
+        height: 280px;
         border-radius: 25px;
         position: relative;
         overflow: hidden;
+        .imageWrapper {
+            position: absolute;
+            cursor: pointer;
+        }
+    }
+    .buttonConteiner {
+        margin-top: 15px;
     }
 }
