--- a/src/components/CategoryListSeting/CategoryListSeting.scss
+++ b/src/components/CategoryListSeting/CategoryListSeting.scss
@@ -30,9 +30,11 @@
     }
 
     .CategoryListSeting__list {
-        @include blockCenter($height: 83%);
-        border: 2px solid black;
+        @include blockCenter($height: 83% );
+        position: relative;
+        border: 2px solid $purpleColor;
         border-radius: 25px;
         margin-top: 20px;
+        overflow: auto;
     }
 }
