continued to creact component ProjectFileStructure, changed component AddButton to SquareButton, added reusabiliti to the SqureButton component

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -6,3 +6,6 @@ $blueColor: #8BA4F9;
 $redColor: #a71d31;
 $redColorDark: #3f0d12;
 $greyColor:  rgba(0, 0, 0, 0.6);
+$greenColor: #6FCF97;
+$lightGreenColor: #66D2EA
+
