--- a/src/components/ProjectFileStructure/ProjectFileStructure.scss
+++ b/src/components/ProjectFileStructure/ProjectFileStructure.scss
@@ -4,30 +4,17 @@
     top: 10px;
     flex-direction: column;
     position: absolute;
-    .ProjectFileStructure__subcategory {
-        width: 100%;
-        display: none;
-        border: solid 1px red;
-    }
-    .ProjectFileStructure__subcategory__inputConteiner{
-        @include blockCenter($alignHorizontal: space-between, $height: auto, $width: 270px);
-        margin-left: 10px;
-    }
 
+    .ProjectFileStructure__subcategory {
+        width: 95%;
+        display: none;
+        flex-direction: column;
+        margin-left: 5%;
+        .ProjectFileStructure__subcategory__button {margin-bottom: 5px; margin-top: 5px;}
+    }
+    
     .ProjectFileStructure__subcategory-drop {
         display: block;
     }
-    .ProjectFileStructure__subcategory__conteiner{
-        border: solid 1px black;
-        background: black;
-    }
-    /* .ProjectFileStructure__subcategory:nth-child(2n){
-        padding-left: 50px;
-        border: black 1px solid;
-        
-        & > .ProjectFileStructure__subcategory__inputConteiner {
-            margin-bottom: 10px;
-        }
-    } */
-  
+    
 }
