--- a/src/components/InputStandart/InputStandart.scss
+++ b/src/components/InputStandart/InputStandart.scss
@@ -1,83 +1,100 @@
 @import '../../scss/mixins.scss';
 @import '../../scss/variables.scss';
 
-.InputStandart {
-    @include blockCenter($alignHorizontal: center, $alignVertical: center, $height: 40px, $width: 200px);
-    background: linear-gradient(180deg, $purpleColor 0%, $blueColor 100%);
+
+.InputStandart__wrapper {
+    height: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     position: relative;
-    border-radius: 25px;
-    cursor: pointer;
-    .InputStandart__insideBlock {
-        @include blockCenter($alignHorizontal: center, $alignVertical: center, $height: 36px, $width: 196px);
-        background: white;
-        border-radius: 25px;
-       
-    }
-    input {
-        width: 80%;
-        height: 90%;
-        border: none;
-        z-index: 1;
-        color: $blueColor;
-        font-size: 18px;
-    }
-    input:focus {
-        outline: none;
-    }
-    
-}
-label {
-    @include blockCenter();
-    position: absolute;
-    border-radius: 25px;
-    color:  rgba(0, 0, 0, 0.6);
-    font-size: 18px;
-    z-index: 2;
-    cursor: pointer;
-    transition: all 0.5s;
- 
+    overflow: hidden;
 }
 
-.InputStandart__focus {
+.InputStandart__bottom {
     position: absolute;
-    top: -2px;
-    width: 120%;
+    bottom: 10px;
+    width: 100%;
+    height: 3px;
+    background: rgba(0, 0, 0, 0.6);
+    transition: all 0.5s;
+}
+
+.InputStandart:focus-within > .InputStandart__bottom {
+    width: 0;
+    transition: all 0.5s;
+    
+}
+
+.InputStandart {
+    @include blockCenter($alignHorizontal: center, $alignVertical: center, $height: 40px, $width: 250px);
+    background: linear-gradient(180deg, $purpleColor 0%, $blueColor 100%);
+    border-radius: 25px;
+}
+
+.InputStandart__inside {
+    @include blockCenter($alignHorizontal: center, $alignVertical: center, $height: 36px, $width: 246px);
+    background: white;
+    border-radius: 25px;
+}
+
+.InputStandart__inside__label--blur {
+    position: absolute;
+    cursor: pointer;
+    font-size: 18px;
+    color:  rgba(0, 0, 0, 0.6);
+    transition: all 0.5s;
+    z-index: 2;
+}
+
+.InputStandart__inside__label--focus {
+    transform: translate(-40px, -20px);
+    width: auto;
+    font-size: 14px;
+    color: $blueColor;
+    background: white;
+    transition: all 0.5s;
+}
+
+.InputStandart__inside__hidden {
+    position: absolute;
+    bottom: 7px;
+    width: 100%;
     height: 100%;
     background: white;
     transition: all 0.5s;
-   
-    
 }
 
-.InputStandart:focus-within > .InputStandart__focus  {
-    height: 6px;
-    width: 0;
+.InputStandart__inside:focus-within > .InputStandart__inside__hidden {
+    transform: translate(0, -45px);
     transition: all 0.5s;
 }
 
-.InputStandart:focus-within > .InputStandart__border__bottom {
-    width: 0%;
-    transition: all 0.3s;
+.InputStandart__inside > input {
+    width: 80%;
+    height: 90%;
+    font-size: 16px;
+    z-index: 1;
+    border: none;
 }
 
-.InputStandart__border__bottom {
+.InputStandart__inside > input:focus {
+    outline: none;
+}
+
+.InputStandart__errorMessage {
     position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.6);
-    transition: all 0.5s;
-
+    color: $redColor;
+    font-size: 12px;
+    bottom: -2px;
+    left: 25px;
+    display: none;
 }
 
-.input--filed {
-    width: auto;
-    height: auto;
-    font-size: 14px;
-    background: white;
-    color: $purpleColor;
-    transform: translate(-15px, -20px);
-    transition: all 0.5s;
+.error {
+    background: $redColor;
+    .InputStandart__inside__label--focus {color: $redColorDark;}
+    .InputStandart__bottom {background: $redColor;}
+    .InputStandart__errorMessage {display: block;}
+    input {color: $redColor;}
 }
-
-
