uppdate component StandartInput, added new component EditInput, added function to change category name

--- a/src/components/CategoryItem/CategoryItem.scss
+++ b/src/components/CategoryItem/CategoryItem.scss
@@ -19,6 +19,11 @@
             color: #ffb20d;
         }
     }
+
+    .CategoryItem__name > span {
+        /* border: 1px solid black; */
+        height: 25px;
+    }
     .CategoryItem__button {
         opacity: 0;
         display: flex;
