--- a/src/components/InputStandart/InputStandart.scss
+++ b/src/components/InputStandart/InputStandart.scss
@@ -16,7 +16,7 @@
     bottom: 10px;
     width: 100%;
     height: 3px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgb(44, 21, 117);
     transition: all 0.5s;
 }
 
@@ -96,6 +96,11 @@
     .InputStandart__bottom {background: $redColor;}
     .InputStandart__errorMessage {display: block;}
     input {color: $redColor;}
+}
+
+.inputDisabled {
+    .InputStandart__bottom {background: rgba(0, 0, 0, 0.2)}
+    .InputStandart__inside__label--blur {color:  rgba(0, 0, 0, 0.2)}
 }
 
 .small {
